--- a/index.html
+++ b/index.html
@@ -303,7 +303,25 @@
                             <span class="tech-tag">Image Processing</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">
+                            <a href="https://github.com/Youssefaboalyouser/Assignment-3" class="project-link">
+                                <i class="fab fa-github"></i> GitHub
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card programming">
+                    <div class="project-image">
+                        <i class="fas fa-tasks"></i>
+                    </div>
+                    <div class="project-content">
+                        <h3>GUI TaskWorker Application</h3>
+                        <p>C# GUI application that match client needs with worker skills and geographical location bassed on MYSQL data server</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">C#</span>
+                            <span class="tech-tag">TaskWorker</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/Youssefaboalyouser/Task_Worker" class="project-link">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
                         </div>
@@ -321,7 +339,7 @@
                             <span class="tech-tag">C++</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">
+                            <a href="https://github.com/Youssefaboalyouser/some_applications" class="project-link">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
                         </div>
@@ -339,7 +357,7 @@
                             <span class="tech-tag">OOP</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">
+                            <a href="https://github.com/Youssefaboalyouser/school-management-system" class="project-link">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
                         </div>
@@ -357,7 +375,7 @@
                             <span class="tech-tag">Assembly</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">
+                            <a href="https://github.com/Youssefaboalyouser/VoleMachine_Assignment" class="project-link">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
                         </div>
@@ -375,13 +393,34 @@
                             <span class="tech-tag">Game Development</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">
+                            <a href="https://github.com/Youssefaboalyouser/tic-tac-toe-games" class="project-link">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
                         </div>
                     </div>
                 </div>
                 <!-- Web Projects -->
+                <div class="project-card web">
+                    <div class="project-image">
+                        <i class="fas fa-book"></i>
+                    </div>
+                    <div class="project-content">
+                        <h3>InkWave</h3>
+                        <p>Full stack liberary with responsive desing using rest api collaborate with Django for backend</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">HTML</span>
+                            <span class="tech-tag">CSS</span>
+                            <span class="tech-tag">JS</span>
+                            <span class="tech-tag">API</span>
+                            <span class="tech-tag">Django</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://youssefaboalyouser.github.io/InkWave/" class="project-link">
+                                <i class="fas fa-external-link-alt"></i> Live Demo
+                            </a>
+                        </div>
+                    </div>
+                </div>
                 <div class="project-card web">
                     <div class="project-image">
                         <i class="fas fa-faucet"></i>
@@ -394,7 +433,7 @@
                             <span class="tech-tag">CSS</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">
+                            <a href="https://youssefaboalyouser.github.io/Virtual-Tap/" class="project-link">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
                             </a>
                         </div>
@@ -413,7 +452,7 @@
                             <span class="tech-tag">Bootstrap</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">
+                            <a href="https://youssefaboalyouser.github.io/Agency_page/" class="project-link">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
                             </a>
                         </div>
@@ -432,7 +471,7 @@
                             <span class="tech-tag">Bootstrap</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">
+                            <a href="https://youssefaboalyouser.github.io/Templeate_creator/" class="project-link">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
                             </a>
                         </div>
